Fix footer whitespace, add favicon, add scroll to top button, add logo to mobile nav

--- a/css/app.css
+++ b/css/app.css
@@ -5858,7 +5858,10 @@ button.close {
     width: 100%;
     height: 70px;
     box-shadow: 0 0 6px #262626;
-    z-index: 100; }
+    z-index: 100;
+    text-align: left; }
+    .nav-mobile img {
+      margin: 8px 0 0 20px; }
     .nav-mobile .navbar-mobile {
       display: block;
       margin-top: 5px; }
@@ -5923,8 +5926,7 @@ button.close {
     width: 100%;
     z-index: 10; }
     .nav-desktop .nav-left img {
-      padding-top: 13px;
-      padding-left: 130px; }
+      margin: 13px 0 0 120px; }
     .nav-desktop .nav-right ul {
       list-style-type: none;
       display: inline-flex;
@@ -5941,6 +5943,29 @@ button.close {
             color: #58a9ec; }
           .nav-desktop .nav-right ul li a.single.active, .nav-desktop .nav-right ul li a:visited.active {
             color: #58a9ec; } }
+#topButton {
+  opacity: 0;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 99;
+  width: 60px;
+  height: 60px;
+  border: 1px solid #3a62b6;
+  border-radius: 50%;
+  background-color: #3a62b6;
+  color: #fff;
+  font-size: 36px;
+  font-weight: bold;
+  cursor: pointer;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
+  transition: 0.6s ease; }
+
+#topButton:hover {
+  background-color: #2e4d8f;
+  border-color: #2e4d8f;
+  transition: 0.6s ease; }
+
 .hero {
   background: url("../img/hero-image-2.jpeg");
   background-attachment: fixed;
@@ -6143,9 +6168,6 @@ button.close {
     font-size: 0.8em;
     letter-spacing: 2px;
     padding-top: 25px; }
-
-.sub-footer {
-  height: 30px; }
 
 /*!
  *  Font Awesome 4.7.0 by @davegandy - http://fontawesome.io - @fontawesome
