--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -16,7 +16,3 @@
     padding-top: 25px;
   }
 }
-
-.sub-footer {
-  height: 30px;
-}
