--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -37,6 +37,10 @@
     height: 70px;
     box-shadow: 0 0 6px #262626;
     z-index: 100;
+    text-align: left;
+    img {
+      margin: 8px 0 0 20px;
+    }
     .navbar-mobile {
       display: block;
       margin-top: 5px;
@@ -124,8 +128,7 @@
     z-index: 10;
     .nav-left {
       img {
-        padding-top: 13px;
-        padding-left: 130px;
+        margin: 13px 0 0 120px;
       }
     }
     .nav-right {
@@ -152,4 +155,34 @@
       }
     }
   }
+}
+
+
+// ********************
+// SCROLL TO TOP BUTTON
+// ********************
+
+#topButton {
+    opacity: 0;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 99;
+    width: 60px;
+    height: 60px;
+    border: 1px solid #3a62b6;
+    border-radius: 50%;
+    background-color: #3a62b6;
+    color: $tertiary-font-color;
+    font-size: 36px;
+    font-weight: bold;
+    cursor: pointer;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
+    transition: 0.6s ease;
+}
+
+#topButton:hover {
+    background-color: darken(#3a62b6, 10%);
+    border-color: darken(#3a62b6, 10%);
+    transition: 0.6s ease;
 }
